# notes

Dart/: README.md
Docker/: README.md
Docker/Kafka/: 部署文档.md
Docker/Kafka/集群部署/Kafka 1/: docker-compose.yaml
Docker/Kafka/集群部署/Kafka 2/: docker-compose.yaml
Docker/Kafka/集群部署/Kafka Manager 1/: docker-compose.yaml
English/: README.md
Git/: README.md
Gitlab/: README.md
Golang/: Kafka生产者与消费者.md  URL构建器.md  基于Redis的分布式锁.md  微信授权登录.md  真随机数生成.md  随机字符串生成.md
KCP/: README.md
Kafka/Kafka2集群部署/: README.md
Kafka/Kafka3集群部署/: README.md
Kubernetes/: README.md  deploy-v1.yaml
Linux/: README.md
Mongo/: README.md
MySQL/: 留存率计算.md
NSQ/: docker-compose.yaml
Nginx/: README.md
Rust/: README.md
Rust/awesome-axum/: Cargo.toml
Rust/awesome-axum/examples/: basic.rs
Rust/awesome-crab/: Cargo.toml
Rust/awesome-crab-lib/: Cargo.toml
Rust/awesome-crab-lib/src/: lib.rs
Rust/awesome-crab/src/: main.rs
游戏服务器/due游戏服务器/: README.md
