[package]
name = "awesome-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.17", features = ["headers"]}
tokio = {version = "1.21.2", features = ["full"]}
serde ={ version = "1.0.147", features = ["derive"]}
jsonwebtoken = "8.1.1"